--- a/myblog/templates/modules/footer.html
+++ b/myblog/templates/modules/footer.html
@@ -3,6 +3,6 @@
         <p class="float-right">
             <a href="#">Наверх</a>
         </p>
-        <span class="text-muted">Что то про владельцев сайта</span>
+        <span class="text-muted">https://github.com/AleksandrB00</span>
     </div>
 </footer>
