--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -35,7 +35,7 @@
           {% if user.is_authenticated %}
           <span class="navbar-text mr-2">{{ user }}</span>
           <a href="{% url 'logout' %}" class="btn btn-outline-light">Выход</a>
-          <a href="" class="btn btn-outline-light">Создать пост</a>
+          <a href="{% url 'create_post' %}" class="btn btn-outline-light">Создать пост</a>
           <a href="" class="btn btn-outline-light">Профиль</a>
           {% else %}
           <a href=" {% url 'signin' %} " class="btn btn-outline-light mr-2">Вход</a>
