--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -25,10 +25,10 @@
                   <a href="{% url 'home' %}" class="nav-link">Главная</a>
               </li>
               <li class="nav-item ">
-                  <a href="#" class="nav-link">Контакты</a>
+                  <a href="#" class="nav-link">Связаться со мной</a>
               </li>
           </ul>
-          <form action="" class="form-inline my-2 my-lg-0", method="get">
+          <form action="{% url 'search_results' %}" class="form-inline my-2 my-lg-0", method="get">
               <input name="q" type="text" class="form-control mr-sm-2" placeholder="Поиск" aria-label="Поиск">
               <button class="btn btn-outline-success my-2 my-sm-0 mr-2" type="submit">Поиск</button>
           </form>
@@ -36,7 +36,7 @@
           <span class="navbar-text mr-2">{{ user }}</span>
           <a href="{% url 'logout' %}" class="btn btn-outline-light">Выход</a>
           <a href="{% url 'create_post' %}" class="btn btn-outline-light">Создать пост</a>
-          <a href="" class="btn btn-outline-light">Профиль</a>
+          <a href="{% url 'profile_page' %}" class="btn btn-outline-light">Профиль</a>
           {% else %}
           <a href=" {% url 'signin' %} " class="btn btn-outline-light mr-2">Вход</a>
           <a href=" {% url 'signup' %} " class="btn btn-outline-light mr-2">Регистрация</a>
