--- a/myblog/templates/home.html
+++ b/myblog/templates/home.html
@@ -13,21 +13,24 @@
 <div class="container">
     <h1 class="my-3">Последние записи блога</h1>
     <div class="row">
+        {% for post in page_obj %}
         <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-                <img src="" alt="" class="card-img-top">
+                <img src="{{ post.image.url }}" alt="" class="card-img-top">
                 <div class="card-body">
-                    <h4 class="card-title"></h4>
-                    <p class="card-text"></p>
+                    <h4 class="card-title">{{ post.h1 }}</h4>
+                    <p class="card-text">{{ post.author.first_name }} {{ post.author.last_name }}</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <a href="" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                            <a href="{% url 'post_detail' post.slug %}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
                         </div>
                         <small class="text-muted"></small>
+                        {{ post.post_date }}
                     </div>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
