--- a/myblog/templates/search.html
+++ b/myblog/templates/search.html
@@ -13,7 +13,7 @@
             </nav>
             <p class="lead">Найдено записей: {{ count }}</p>
             {% for result in results %}
-                <a href="{% url 'post_detail' slug=result.url %}"><h2>{{ result.h1 }}</h2></a>
+                <a href="{% url 'post_detail' slug=result.slug %}"><h2>{{ result.h1 }}</h2></a>
                 <p>{{ result.title|safe }}</p>
                 <hr>
             {% endfor %}
