--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -25,7 +25,7 @@
                   <a href="{% url 'home' %}" class="nav-link">Главная</a>
               </li>
               <li class="nav-item ">
-                  <a href="#" class="nav-link">Связаться со мной</a>
+                  <a href="{% url 'contact' %}" class="nav-link">Связаться со мной</a>
               </li>
           </ul>
           <form action="{% url 'search_results' %}" class="form-inline my-2 my-lg-0", method="get">
