--- a/myblog/templates/modules/carousel.html
+++ b/myblog/templates/modules/carousel.html
@@ -19,7 +19,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Функционал сайта</h5>
                     <p>На сайте реализована регистрация пользователя, вход, выход, поиск по заголовкам и содержанию статей, 
-                         полностью редактируемый профиль пользователя, возможность создания постов для зарегистрированных пользоваетлей а также 
+                         полностью редактируемый профиль пользователя, возможность создания постов для зарегистрированных пользоваетлей, тэги, работающая форма обратной связи, а также 
                     комментарии к постам. Если вы хотите поделиться мнением о данной работе можете воспользоваться формой обратной связи на сайте и отправить мне сообщение заполнив её.</p>
                 </div>
             </div>
