--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -24,7 +24,7 @@
               <li class="nav-item active">
                   <a href="{% url 'home' %}" class="nav-link">Главная</a>
               </li>
-              <li class="nav-item ">
+              <li class="nav-item active">
                   <a href="{% url 'contact' %}" class="nav-link">Связаться со мной</a>
               </li>
           </ul>
