--- a/myblog/templates/modules/aside.html
+++ b/myblog/templates/modules/aside.html
@@ -3,18 +3,21 @@
         <h5 class="card-header">Теги</h5>
         <div class="card-body">
             <div class="d-flex flex-wrap">
-                        <a href="" class="m-2 h5"></a>
+                {% for mt in common_tags %}
+                        <a href="{% url 'tag' mt.slug %}" class="m-2 h5">#{{mt}}</a>
+                {% endfor %}
             </div>
         </div>
     </div>
-
     <div class="card my-4">
         <h5 class="card-header">Последние статьи</h5>
+        {% for lp in last_posts %}
             <div class="card-body">
-                <h5 class="card-title"></h5>
-                <img src="" alt="" class="card-img-top">
-                <a href="" class="card-link">Подробнее</a>
+                <h5 class="card-title">{{ lp.h1 }}</h5>
+                <img src="{{ lp.image.url }}" alt="" class="card-img-top">
+                <a href="{% url 'post_detail' lp.slug %}" class="card-link">Подробнее</a>
                 <hr>
             </div>
+        {% endfor %}
     </div>
 </div>
