--- a/myblog/templates/modules/carousel.html
+++ b/myblog/templates/modules/carousel.html
@@ -11,7 +11,7 @@
                 <img src="{% static 'img/first_im.jpg' %}" class="d-block w-100" alt="Первая картинка">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Здравствуйте!!!</h5>
-                    <p>Это мой первый более менее большой сайт на Django.</p>
+                    <p>Это мой первый большой сайт на Django.</p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -19,7 +19,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Функционал сайта</h5>
                     <p>На сайте реализована регистрация пользователя, вход, выход, поиск по заголовкам и содержанию статей, 
-                         полностью редактируемый профиль пользователя, возможность создания постов для зарегистрированных пользоваетлей, тэги, работающая форма обратной связи, а также 
+                    полностью редактируемый профиль пользователя, возможность создания постов для зарегистрированных пользоваетлей, тэги, работающая форма обратной связи, а также 
                     комментарии к постам. Если вы хотите поделиться мнением о данной работе можете воспользоваться формой обратной связи на сайте и отправить мне сообщение заполнив её.</p>
                 </div>
             </div>
