--- a/myblog/templates/signin.html
+++ b/myblog/templates/signin.html
@@ -2,14 +2,21 @@
 {% load static %}
 
 {% block content %}
-    <div class="text-center">
-                <div class="alert alert-danger">
-                    <strong></strong>
-                </div> 
-                
-                <div class="alert alert-danger">
-                    <strong></strong>
-                </div>
+<div class="text-center">
+    {% if form.errors %}
+    {% for field in form %}
+    {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+            {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+            {% endfor %}
+            {% endif %}
         <form class="form-signin" method="post" action="">
             {% csrf_token %}
             <h1 class="h3 mb-3 mt-3 font-weight-normal">Укажите имя пользователя и пароль</h1>
